# SigmaGo

./: CMakeLists.txt  LICENSE  RL.eps  人工智能+象棋“Σ”.md  智能棋局：探索人工智能在围棋领域的革新与挑战.tex
chess/: CMakeLists.txt  chess.cpp  chess.h
sigma/: CMakeLists.txt  MCTS.cpp  MCTS.h  policyValueNet.cpp  policyValueNet.h
